# Komelia

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PRIVACY_POLICY.MD  README.md  build.gradle.kts  conveyor.conf  conveyor_gradle_config.sh  gradle.properties  settings.gradle.kts
.run/: desktop.run.xml
cmake/: CMakeLists.txt  android-arm64-build.sh  android-arm64.Dockerfile  android-armv7a-build.sh  android-armv7a.Dockerfile  android-build.sh  android-x86-build.sh  android-x86.Dockerfile  android-x86_64-build.sh  android-x86_64.Dockerfile  android.Dockerfile  linux-x86_64-build.sh  linux-x86_64.Dockerfile  windows-x64-mingw_onnxruntime_c_api.h.patch  windows-x64-toolchain-mingw-x86_64.cmake  windows-x86_64-build.sh  windows-x86_64.Dockerfile
composeApp/: build.gradle.kts  javax.imageio.spi.ImageReaderSpi
epub-reader-webui/komga-webui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.mts
epub-reader-webui/ttu-ebook-reader/: package-lock.json  tsconfig.json  vite.config.ts
gradle/: libs.versions.toml
image-decoder/: .gitignore  build.gradle.kts
image-decoder/native/: CMakeLists.txt  Dockerfile  android-x86_64.Dockerfile  build-android-arm64.sh  build-android-x86_64.sh  build-w64.sh  build.sh  linux-x86-64.Dockerfile  toolchain-mingw-w64-x86_64.cmake  w64-toolchain-mingw-x86_64.cmake  w64.Dockerfile  windows-x86_64.Dockerfile
image-decoder/native/cmake/: brotli.cmake  dav1d.cmake  de265.cmake  expat.cmake  ffi.cmake  fftw.cmake  glib.cmake  heif.cmake  highway.cmake  iconv.cmake  jxl.cmake  komelia.cmake  mozjpeg.cmake  onnxruntime.cmake  spng.cmake  tiff.cmake  vips.cmake  webp.cmake  zlib.cmake
image-decoder/native/cmake/patches/: onnxruntime_cmake.patch
image-decoder/native/komelia_lib/: CMakeLists.txt
image-decoder/native/komelia_lib/src/onnxruntime/: komelia_onnxruntime.c  onnxruntime_conversions.h
image-decoder/native/komelia_lib/src/onnxruntime/device/: devices_common_jni.h  komelia_enumerate_devices.h  komelia_enumerate_devices_cuda.c
image-decoder/native/komelia_lib/src/skia/: komelia_skia.cpp
image-decoder/native/komelia_lib/src/vips/: komelia_vips.c  vips_common_jni.h
image-decoder/native/src/: CMakeLists.txt  komelia_android_bitmap.c  komelia_onnxruntime.c  komelia_vips.c  komelia_vips_decoder.c  komelia_vips_ort_decoder.c  onnxruntime_conversions.c  onnxruntime_conversions.h  ort_conversions.c  ort_conversions.h  vips_common_jni.c  vips_common_jni.h  vips_jni.c  vips_jni.h  vips_wrapper.c
komelia-app/: android.pro  build.gradle.kts  desktop.pro  no_icons.pro
komelia-app/jbr-api/: README.md
komelia-app/webpack.config.d/: webpack.dev.config.js
komelia-core/: build.gradle.kts
komelia-db/flyway-gradle-plugin/: README.md  build.gradle.kts
komelia-db/shared/: build.gradle.kts
komelia-db/sqlite/: build.gradle.kts
komelia-epub/: build.gradle.kts
komelia-epub/native/: CMakeLists.txt
komelia-epub/native/src/: komelia_callbacks.c  komelia_callbacks.h  komelia_webview.h  komelia_webview_webkit2gtk.c  webview_jni.c
komelia-image-decoder/: build.gradle.kts
komelia-image-decoder/vips/native/: .clang-format  CMakeLists.txt
komelia-image-decoder/vips/native/src/android/: komelia_android_bitmap.c
komelia-image-decoder/vips/native/src/onnxruntime/: komelia_onnxruntime.c  onnxruntime_conversions.c  onnxruntime_conversions.h  win32_strings.c  win32_strings.h
komelia-image-decoder/vips/native/src/onnxruntime/device/: devices_common_jni.c  devices_common_jni.h  komelia_enumerate_devices.h  komelia_enumerate_devices_cuda.c  komelia_enumerate_devices_dxgi.c  komelia_enumerate_devices_rocm.c  komelia_enumerate_devices_vulkan.c
komelia-image-decoder/vips/native/src/skia/: komelia_skia.cpp
komelia-image-decoder/vips/native/src/vips/: komelia_vips.c  vips_common_jni.c  vips_common_jni.h
komelia-infra/webview/native/: CMakeLists.txt
komelia-infra/webview/native/patches/: use_base64_resolve.patch
komelia-infra/webview/native/src/: webview_jni.c
komelia-infra/webview/native/src/webkit2gtk/: komelia_webview_webkit2gtk.c  request_interceptor_extension.c
komelia-infra/webview/native/src/webview2/: webview2_window.c  webview2_window.h  win32_strings.c
komelia-jni/: build.gradle.kts
komelia-onnxruntime/native/: CMakeLists.txt
komelia-onnxruntime/native/src/onnxruntime/: komelia_error.h  komelia_onnxruntime.c  komelia_onnxruntime.h  komelia_ort_rf_detr.c  komelia_ort_rf_detr.h  komelia_ort_upscaler.c  komelia_ort_upscaler.h  win32_strings.h
komelia-onnxruntime/native/src/onnxruntime/device/: komelia_enumerate_devices.h  komelia_enumerate_devices_cuda.c  komelia_enumerate_devices_dxgi.c  komelia_enumerate_devices_rocm.c  komelia_enumerate_devices_vulkan.c
komelia-onnxruntime/native/src/onnxruntime/jni/: komelia_onnxruntime_jni.c  komelia_rf_detr_jni.c
komelia-ui/: build.gradle.kts
komelia-webview/: build.gradle.kts
komelia-webview/native/: CMakeLists.txt
komelia-webview/native/src/: komelia_callbacks.c  komelia_callbacks.h  komelia_webview.h  webview_jni.c
komelia-webview/native/src/webkit2gtk/: komelia_webview_webkit2gtk.c
komelia-webview/native/src/webview2/: komelia_webview_webview2.c  webview2_options.c  webview2_options.h
komga-webui/: package-lock.json
komga_client/: build.gradle.kts
patches/: disable_self_updates.patch
ttu-ebook-reader/: README.md  index.html
vips/: build.gradle.kts
vips/native/: CMakeLists.txt  Dockerfile  build-w64.sh  build.sh  cross_file.txt  toolchain-mingw-w64-x86_64.cmake  w64.cross_file.txt
vips/native/cmake/: dav1d.cmake  de265.cmake  expat.cmake  ffi.cmake  fftw.cmake  glib.cmake  heif.cmake  highway.cmake  iconv.cmake  komelia.cmake  mozjpeg.cmake  pcre2.cmake  spng.cmake  tiff.cmake  vips.cmake  webp.cmake  zlib.cmake
vips/native/cmake/patches/: zlib-ng-2-fixes.patch
vips/native/src/: CMakeLists.txt  vips_wrapper.c
wasm-image-worker/: build.gradle.kts
wasmImageWorker/: build.gradle.kts
webview/: build.gradle.kts
webview/native/: CMakeLists.txt  build.sh
webview/native/src/: gtk_webview.c
(+2361 files in other folders)
